--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Play Connect-Four!</h1>
+    <div id="winner"></div>
     <div id="wrapper">
         <div class="column" id="0"></div>
         <div class="column" id="1"></div>
